tests/gtests/negative/interactions/04_whitespace_card_instance_id.gtest
#SET OUT=${WORK_DIR}/whitespace_card_instance_id.json
#RUN greentic-component test --wasm ${REPO_ROOT}/target/wasm32-wasip2/release/component_adaptive_card.wasm --manifest ${REPO_ROOT}/component.manifest.json --op card --input-json '{"card_spec":{"inline_json":{"type":"AdaptiveCard","version":"1.3","body":[]}},"interaction":{"interaction_type":"Submit","action_id":"go","card_instance_id":"   ","raw_inputs":{}}}'
#EXPECT_EXIT 0
#CAPTURE_JSON > ${OUT}
#EXPECT_JSONPATH ${OUT} error.code equals AC_INTERACTION_INVALID
#EXPECT_JSONPATH ${OUT} error.details.validation_issues[*].code contains AC_INTERACTION_INVALID
#SAVE_ARTIFACT ${OUT}
